--- a/README
+++ b/README
@@ -1,2 +1,6 @@
 Cours cesi mobile
 =================
+
+Le premier chiffre indique le niveau d'accompagnement. Plus ce chiffre est bas, plus le TP est guidé.
+
+Les deux chiffres suivants indique le numéro du TP.
